--- a/us/template/edit-player-profile.html
+++ b/us/template/edit-player-profile.html
@@ -40,9 +40,10 @@
                             <a class="nav-link text-secondary" aria-current="page" href="#">Scouts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page" href="{% url 'player-club' %}">Clubs</a>
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'player-club' %}">Clubs</a>
                         </li>
-                        
+
                     </ul>
                 </div>
                 <div class="d-flex w-100 justify-content-start justify-content-sm-end">
@@ -58,56 +59,60 @@
         <div class="bg-white shadow-lg mt-4 pb-3 rounded col-12 col-lg-8">
             <p class="m-4 text-secondary fs-4 fw-bold">Edit Profile</p>
             <form action="" method="post">
-            <div class="d-flex justify-content-center"><img class="col-lg-2 col-5 rounded-circle" src={{user.img}} alt=""></div>
+                {% csrf_token %}
+                <div class="d-flex justify-content-center"><img class="col-lg-2 col-5 rounded-circle" src={{user.img}}
+                        alt=""></div>
 
-            <div class="d-flex justify-content-center"><input type="file" class="mt-4" value="Change image"></div>
-            <div class="d-flex justify-content-center">
-                <div class="col-lg-8 col-12">
-                    <div class="d-flex justify-content-center gap-2 m-5">
-                        <div class="d-flex flex-column w-100">
-                            <label for="fname">First Name</label>
-                            <input class="form-control" type="text" name="fname" value={{user.first_name}}>
+                <div class="d-flex justify-content-center"><input type="file" class="mt-4" value="Change image"></div>
+                <div class="d-flex justify-content-center">
+                    <div class="col-lg-8 col-12">
+                        <div class="d-flex justify-content-center gap-2 m-5">
+                            <div class="d-flex flex-column w-100">
+                                <label for="fname">First Name</label>
+                                <input class="form-control" type="text" name="fname" value={{user.first_name}}>
+                            </div>
+                            <div class="d-flex flex-column w-100">
+                                <label for="lname">Last Name</label>
+                                <input class="form-control" type="text" name="lname" value={{user.last_name}}>
+                            </div>
                         </div>
-                        <div class="d-flex flex-column w-100">
-                            <label for="lname">Last Name</label>
-                            <input class="form-control" type="text" name="lname" value={{user.last_name}}>
+                        <div class="d-flex mt-0 m-5">
+                            <div class="d-flex flex-column w-100">
+                                <label for="email">Email</label>
+                                <input class="form-control" type="text" name="email" value={{user.email}}>
+                            </div>
                         </div>
-                    </div>
-                    <div class="d-flex mt-0 m-5">
-                        <div class="d-flex flex-column w-100">
-                            <label for="email">Email</label>
-                            <input class="form-control" type="text" name="email" value={{user.email}}>
+
+                        <div class="d-flex justify-content-center gap-2 m-5">
+                            <div class="d-flex flex-column w-100">
+                                <label for="pos">Player Position</label>
+                                <select class="form-control" name="pos" id="">
+                                    <option value="{{ user.player_pos }}">{{ user.player_pos }}</option>
+                                    {% for choice_value,choice in pos_choices %}
+                                    <option value="{{ choice }}">{{ choice }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="d-flex flex-column w-100">
+                                <label for="dist">District</label>
+                                <select class="form-control" name="dist" id="">
+                                    <option value="{{ user.district }}">{{ user.district }}</option>
+                                    {% for choice_value,choice in district_choices %}
+                                    <option value="{{ choice }}">{{ choice }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="d-flex flex-column w-100">
+                                <label for="loc">Locality</label>
+                                <input type="text" class="form-control" name="loc" value={{user.locality}}>
+                            </div>
                         </div>
-                    </div>
-                    
-                    <div class="d-flex justify-content-center gap-2 m-5">
-                        <div class="d-flex flex-column w-100">
-                            <label for="pos">Player Position</label>
-                            <select class="form-control" name="pos" id="">
-                                <option value={{user.player_pos}}>{{user.player_pos}}</option>
-                                <option value="GoalKeeper">GoalKeeper</option>
-                                <option value="Center Back">Center Back</option>
-                            </select>
+                        <div class="d-flex justify-content-center">
+                            <button type="submit" class="btn btn-success">Update</button>
                         </div>
-                        <div class="d-flex flex-column w-100">
-                            <label for="dist">District</label>
-                            <select class="form-control" name="dist" id="">
-                                <option value={{user.district}}>{{user.district}}</option>
-                                <option value="Thiruvananthapuram">Thiruvananthapuram</option>
-                                <option value="Kollam">Kollam</option>
-                            </select>
-                        </div>
-                        <div class="d-flex flex-column w-100">
-                            <label for="loc">Locality</label>
-                            <input type="text" class="form-control" name="loc" value={{user.locality}}>
-                        </div>
-                    </div>
-                    <div class="d-flex justify-content-center">
-                        <button class="btn btn-success">Update</button>
                     </div>
                 </div>
-            </div>
-        </form>
+            </form>
         </div>
     </div>
 </body>
