--- a/us/template/index.html
+++ b/us/template/index.html
@@ -16,7 +16,106 @@
 </head>
 
 <body class="bg-light">
-    {% if user.is_club %}
+    {% if user.is_superuser %}
+    <nav class="navbar player-navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="ms-5 navbar-brand d-flex fs-2 fw-bold" href="#">
+                <p class="text-white">Urban</p>
+                <p class="text-warning">Scout</p>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="ms-3 d-flex w-50">
+                    <input type="text" class="form-control" placeholder="Search">
+                    <button class="btn shadow-none"><i class="bi bi-search fs-3 text-white"></i></button>
+                </div>
+                <div class="ms-3">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Manage Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page" href="#">Register Scouts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'player-club' %}">Clubs</a>
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="d-flex w-100 justify-content-start justify-content-sm-end">
+                    <div class="border rounded p-2 pb-0 mt-2 ms-3">
+                        <p class="text-light "><i class="bi bi-person-circle"></i> Admin</p>
+                    </div>
+                    <a href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="d-flex justify-content-center">
+        <div class="bg-white shadow-lg mt-4 pb-3 rounded col-12 col-lg-8">
+            <p class="m-4 text-secondary fs-4 fw-bold">Manage Users</p>
+            <form action="" method="post">
+                {% csrf_token %}
+                
+
+                <div class="d-flex justify-content-center"><input type="file" class="mt-4" value="Change image"></div>
+                <div class="d-flex justify-content-center">
+                    <div class="col-lg-8 col-12">
+                        <div class="d-flex justify-content-center gap-2 m-5">
+                            <div class="d-flex flex-column w-100">
+                                <label for="fname">First Name</label>
+                                <input class="form-control" type="text" name="fname" value={{user.first_name}}>
+                            </div>
+                            <div class="d-flex flex-column w-100">
+                                <label for="lname">Last Name</label>
+                                <input class="form-control" type="text" name="lname" value={{user.last_name}}>
+                            </div>
+                        </div>
+                        <div class="d-flex mt-0 m-5">
+                            <div class="d-flex flex-column w-100">
+                                <label for="email">Email</label>
+                                <input class="form-control" type="text" name="email" value={{user.email}}>
+                            </div>
+                        </div>
+
+                        <div class="d-flex justify-content-center gap-2 m-5">
+                            <div class="d-flex flex-column w-100">
+                                <label for="pos">Player Position</label>
+                                <select class="form-control" name="pos" id="">
+                                    <option value="{{ user.player_pos }}">{{ user.player_pos }}</option>
+                                    {% for choice_value,choice in pos_choices %}
+                                    <option value="{{ choice }}">{{ choice }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="d-flex flex-column w-100">
+                                <label for="dist">District</label>
+                                <select class="form-control" name="dist" id="">
+                                    <option value="{{ user.district }}">{{ user.district }}</option>
+                                    {% for choice_value,choice in district_choices %}
+                                    <option value="{{ choice }}">{{ choice }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="d-flex flex-column w-100">
+                                <label for="loc">Locality</label>
+                                <input type="text" class="form-control" name="loc" value={{user.locality}}>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <button type="submit" class="btn btn-success">Update</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    {% elif user.is_club %}
     <nav class="navbar player-navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="ms-5 navbar-brand d-flex fs-2 fw-bold" href="#">
