on line validation and user status update

--- a/us/template/register.html
+++ b/us/template/register.html
@@ -62,7 +62,9 @@
     <div class="form-group">
         <label for="{{ playerForm.email.id_for_label }}">Email</label>
         {{ playerForm.email }}
-        <p id="email" class="text-danger"></p>
+        {% for error in playerForm.email.errors %}
+        <p class="text-danger">{{ error }}</p>
+    {% endfor %}
     </div>
     <div class="form-group">
         <label for="{{ playerForm.password1.id_for_label }}">Password</label>
@@ -77,6 +79,7 @@
     <div class="form-group">
         <label for="{{ playerForm.player_dob.id_for_label }}">Date of Birth</label>
         {{ playerForm.player_dob }}
+        <p id="dob" class="text-danger"></p>
     </div>
                     <div class="d-flex justify-content-center"><button type="submit"
                     class="btn btn-outline-primary text-light p-2 w-50 mt-3">Sign-up</button></div>
