--- a/us/template/index.html
+++ b/us/template/index.html
@@ -3,6 +3,10 @@
 <html lang="en">
 
 <head>
+    <script>
+        var count=0;
+        
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'style.css' %}">
@@ -59,60 +63,52 @@
     <div class="d-flex justify-content-center">
         <div class="bg-white shadow-lg mt-4 pb-3 rounded col-12 col-lg-8">
             <p class="m-4 text-secondary fs-4 fw-bold">Manage Users</p>
-            <form action="" method="post">
-                {% csrf_token %}
-                
-
-                <div class="d-flex justify-content-center"><input type="file" class="mt-4" value="Change image"></div>
-                <div class="d-flex justify-content-center">
-                    <div class="col-lg-8 col-12">
-                        <div class="d-flex justify-content-center gap-2 m-5">
-                            <div class="d-flex flex-column w-100">
-                                <label for="fname">First Name</label>
-                                <input class="form-control" type="text" name="fname" value={{user.first_name}}>
-                            </div>
-                            <div class="d-flex flex-column w-100">
-                                <label for="lname">Last Name</label>
-                                <input class="form-control" type="text" name="lname" value={{user.last_name}}>
-                            </div>
-                        </div>
-                        <div class="d-flex mt-0 m-5">
-                            <div class="d-flex flex-column w-100">
-                                <label for="email">Email</label>
-                                <input class="form-control" type="text" name="email" value={{user.email}}>
-                            </div>
-                        </div>
-
-                        <div class="d-flex justify-content-center gap-2 m-5">
-                            <div class="d-flex flex-column w-100">
-                                <label for="pos">Player Position</label>
-                                <select class="form-control" name="pos" id="">
-                                    <option value="{{ user.player_pos }}">{{ user.player_pos }}</option>
-                                    {% for choice_value,choice in pos_choices %}
-                                    <option value="{{ choice }}">{{ choice }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                            <div class="d-flex flex-column w-100">
-                                <label for="dist">District</label>
-                                <select class="form-control" name="dist" id="">
-                                    <option value="{{ user.district }}">{{ user.district }}</option>
-                                    {% for choice_value,choice in district_choices %}
-                                    <option value="{{ choice }}">{{ choice }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                            <div class="d-flex flex-column w-100">
-                                <label for="loc">Locality</label>
-                                <input type="text" class="form-control" name="loc" value={{user.locality}}>
-                            </div>
-                        </div>
-                        <div class="d-flex justify-content-center">
-                            <button type="submit" class="btn btn-success">Update</button>
-                        </div>
-                    </div>
+            
+            <div class="d-flex justify-content-center flex-lg-row align-items-center text-center flex-column">
+                <div class="d-flex col-3 justify-content-center flex-column align-items-center">
+                    <p class="fs-5 text-secondary">Number of Users</p>
+                    <p class="fs-4">{{count}}</p>
                 </div>
-            </form>
+                <div class="d-flex col-3 justify-content-center flex-column align-items-center">
+                    <p class="fs-5 text-secondary">Number of Players</p>
+                    <p class="fs-4">{{player}}</p>
+                </div>
+                <div class="d-flex col-3 justify-content-center flex-column align-items-center">
+                    <p class="fs-5 text-secondary">Number of Clubs</p>
+                    <p class="fs-4">{{club}}</p>
+                </div>
+            </div>
+            <div class="table-responsive">
+                <table class="table rounded text-center table-hover table-bordered">
+                    <tr class="thead fw-bold">
+                        <td>Id</td>
+                        <td>Email</td>
+                        <td>User Role</td>
+                        <td>Status</td>
+                        <td>Edit Status</td>
+                        <td>Delete User</td>
+                        
+                    </tr>
+                    {% for i in users %}
+                    <tr>
+                        <td>{{i.id}}</td>
+                        <td>{{i.email}}</td>
+                        <td>{% if i.is_player %}
+                            Player
+                            {% elif i.is_club %}
+                            Club
+                            {% else %}
+                            Admin
+                        {% endif %}</td>
+                        <td>{{i.is_active}}</td>
+                        <td><a href="{% url 'updateStatus' i.id %}"><button class="btn btn-primary"><i class="bi bi-pencil-square"></i></button></a></td>
+                        <td><a href="{% url 'deleteUser' i.id %}"><button class="btn btn-danger"><i class="bi bi-trash3-fill"></i></button></a></td>
+                        
+                    </tr>
+                    {% endfor %}
+                </table>
+            </div>
+            
         </div>
     </div>
     {% elif user.is_club %}
@@ -298,8 +294,8 @@
                         var playerDobString = "{{ user.player_dob }}";
                         console.log(playerDobString)
                         var months = {
-                            'Jan.': 0, 'Feb.': 1, 'Mar.': 2, 'Apr.': 3, 'May': 4, 'June': 5,
-                            'Jul.': 6, 'Aug.': 7, 'Sep.': 8, 'Oct.': 9, 'Nov.': 10, 'Dec.': 11
+                            'Jan.': 0, 'Feb.': 1, 'March': 2, 'Apr.': 3, 'May': 4, 'June': 5,
+                            'Jul.': 6, 'Aug.': 7, 'Sept.': 8, 'Oct.': 9, 'Nov.': 10, 'Dec.': 11
                         };
 
                         var dobParts = playerDobString.split(' ');
