--- a/us/template/player-club.html
+++ b/us/template/player-club.html
@@ -31,7 +31,7 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'player-home' %}">Home</a>
+                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page" href="#">Scouts</a>
