--- a/us/template/player-club.html
+++ b/us/template/player-club.html
@@ -70,7 +70,7 @@
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
                     <div class="d-flex align-items-center justify-content-center col-3">
-                        <button class="btn btn-outline-primary">Show Interest</button>
+                        <a href="{% url 'ShowInterest' %}"><button class="btn btn-outline-primary">Show Interest</button></a>
                     </div>
                 </div>
             </div>
