--- a/us/template/index.html
+++ b/us/template/index.html
@@ -205,7 +205,7 @@
                             <a class="nav-link text-secondary" aria-current="page" href="#">Scouts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page" href="#">Players</a>
+                            <a class="nav-link text-secondary" aria-current="page" href="{% url 'ClubPlayer' %}">Players</a>
                         </li>
                     </ul>
                 </div>
