--- a/us/template/index.html
+++ b/us/template/index.html
@@ -462,13 +462,16 @@
             <div class="m-3 p-5 rounded bg-white shadow-lg">
                 <div>
                     <p class="fw-bold">Recommended Clubs</p>
+                    {% for clubs in clubdata %}
+
                     <div class="d-flex">
                         <div class="rec-img-club">
                             <img class="w-100 rounded-circle"
-                                src="https://www.shareicon.net/data/2016/07/05/791224_man_512x512.png" alt="">
+                                src="{{clubs.img}}" alt="">
                         </div>
-                        <p class="ms-2">Athletico Club</p>
+                        <p class="ms-2">{{clubs.club_name}}</p>
                     </div>
+                    {% endfor %}
 
 
                 </div>
@@ -476,13 +479,15 @@
             <div class="m-3 p-5 rounded bg-white shadow-lg">
                 <div>
                     <p class="fw-bold">Recommended Scouts</p>
+                    {% for scouts in scout %}
                     <div class="d-flex">
                         <div class="rec-img-club">
                             <img class="w-100 rounded-circle"
-                                src="https://www.shareicon.net/data/2016/07/05/791224_man_512x512.png" alt="">
+                                src="{{scouts.img}}" alt="">
                         </div>
-                        <p class="ms-2">Athletico Club</p>
+                        <p class="ms-2">{{scouts.first_name}} {{scouts.last_name}}</p>
                     </div>
+                    {% endfor %}
 
                 </div>
             </div>
