--- a/us/template/club-player.html
+++ b/us/template/club-player.html
@@ -45,13 +45,13 @@
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
                         <p class="text-light "><i class="bi bi-shield-fill"></i> {{user.club_name}}</p>
                     </div>
-                    <button class="btn text-white ms-4">Log-out</button>
+                    <a class="d-flex flex-column justify-content-center text-decoration-none" href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
                 </div>
             </div>
         </div>
     </nav>
     <div class="d-flex flex-column align-items-center justify-content-center">
-        <h5 class="mt-3">Players that are interested in your club</h5>
+        <h2 class="mt-5">Players that are interested in your club</h2>
         {% for i in interested_players %}
         <script>console.log("{{ i.img }}")</script>
         <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
@@ -77,8 +77,8 @@
             
         </div>
         {% endfor %}
-        <h5 class="mt-5">Other Clubs</h5>
-        {% for i in not_interested_players %}
+        <h2 class="mt-5">Shortlisted Players</h2>
+        {% for i in shortlisted_players %}
         <script>console.log("{{ i.img }}")</script>
         <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
             <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
@@ -98,6 +98,34 @@
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
                     
+                </div>
+            </div>
+            
+        </div>
+        {% endfor %}
+        <h2 class="mt-5">Other players</h2>
+        {% for i in not_interested_players %}
+        <script>console.log("{{ i.img }}")</script>
+        <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
+            <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
+                <div class="d-flex align-items-center">
+                    <div class="player-scout-img">
+                        <img class="w-100 rounded-circle" src={{i.img}} alt="">
+                    </div>
+                </div>
+                
+                <div class="ms-3 col-lg-7 col-12">
+                    <p class="fs-2 fw-bold">{{i.first_name}} {{i.last_name}}</p>
+                    <p class=""><b>District: </b>{{i.district}} </p>
+                    <p class=""><b>Locality </b>{{i.locality}}</p>
+                    <p class=""><b>Ability: </b><i class="bi bi-star-fill text-warning text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
+                    <p class=""><b>Potential: </b><i class="bi bi-star-fill text-warning text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
+                </div>
+                
+                <div class="d-flex justify-content-lg-end justify-content-center w-100">
+                    <div class="d-flex align-items-center justify-content-center col-3">
+                        <a href="{% url 'ShortlistPlayer' i.id %}"><button class="btn btn-outline-primary">Shortlist Player</button></a>
+                    </div>
                 </div>
             </div>
             
